[package]
name = "flipnote-id"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
hex = "0.4.3"
structure = "0.1.2"

[profile.release]
lto = true
opt-level = 3
strip = true
